added model stacking

--- a/rossman/implementation.ipynb
+++ b/rossman/implementation.ipynb
@@ -6681,7 +6681,265 @@
     "collapsed": true
    },
    "source": [
-    "**3d-Thomas' attemps**"
+    "### Model Stacking Attempt\n",
+    "\n",
+    "In this attempt 6 models were created including an SVM model, 2x XGB models, and 3x RF models. These models were then combined with the feature matrix and fed into a 2nd stage model another XGB. The hold out performance of this stacked model is then compared to a baseline model to determine if it improves performance.\n",
+    "\n",
+    "A number of issues arose that prevented this method from working. Firstly the stage 1 models did not perform particularly well by themselves and needed more individual tuning. Secondly most of them were tree based methods which possibly produce correlated predictions and thus don't combine that effectively.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named xgboost",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0034976c3340>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGradientBoostingRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLinearSVR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlinear_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnaive_bayes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named xgboost"
+     ]
+    }
+   ],
+   "source": [
+    "#Parts of this script come from the XGB benchmark script submitted to the kaggle forum\n",
+    "\n",
+    "#ughhhh libraries\n",
+    "import csv\n",
+    "import datetime\n",
+    "from sklearn import preprocessing\n",
+    "import numpy as np\n",
+    "from scipy import sparse\n",
+    "from sklearn.cross_validation import KFold\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.ensemble import GradientBoostingRegressor\n",
+    "from sklearn.svm import LinearSVR\n",
+    "import xgboost as xgb\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import naive_bayes\n",
+    "import time\n",
+    "import pandas as pd\n",
+    "\n",
+    "#Load data\n",
+    "train = pd.read_csv('/users/thomasatkins/Documents/MIDS/AML/Rossman/train.csv')\n",
+    "test = pd.read_csv('/users/thomasatkins/Documents/MIDS/AML/Rossman/test.csv')\n",
+    "stores = pd.read_csv('/users/thomasatkins/Documents/MIDS/AML/Rossman/store.csv')\n",
+    "\n",
+    "#Join Stores\n",
+    "train = pd.merge(train,stores,on='Store')\n",
+    "test = pd.merge(test,stores,on='Store')\n",
+    "\n",
+    "#Remove Sales = 0 Data\n",
+    "train = train[train.Sales>0]\n",
+    "\n",
+    "#Convert to log sales\n",
+    "train.Sales = np.log(train.Sales + 1)\n",
+    "\n",
+    "#Fill na with 1 for open unknown\n",
+    "train['Open'] = train['Open'].fillna(1)\n",
+    "test['Open'] = test['Open'].fillna(1)\n",
+    "\n",
+    "#Add Date Characteristics\n",
+    "date1 = [datetime.datetime.strptime(i,'%Y-%m-%d') for i in train.Date]\n",
+    "date2 = [datetime.datetime.strptime(i,'%Y-%m-%d') for i in test.Date]\n",
+    "train['Day'] = [i.day for i in date1]\n",
+    "train['Month'] = [i.month for i in date1]\n",
+    "train['Year'] = [i.year for i in date1]\n",
+    "test['Day'] = [i.day for i in date2]\n",
+    "test['Month'] = [i.month for i in date2]\n",
+    "test['Year'] = [i.year for i in date2]\n",
+    "\n",
+    "\n",
+    "#feature engineering - customers per sale and sales per customer by store\n",
+    "def map_cust_per_sale_by_store(dat):\n",
+    "    res = []\n",
+    "    for i in dat:\n",
+    "        res.append([i[0],1.0*float(i[1])/float(i[2]),1.0*float(i[2])/float(i[1])])\n",
+    "    return res\n",
+    "\n",
+    "#this reduce function calculates the median customers per sale and median sales per customer for all stores\n",
+    "def reduce_by_key(sorted_kv):\n",
+    "    key=1\n",
+    "    values_in_key1=[]\n",
+    "    values_in_key2=[]\n",
+    "    results=[]\n",
+    "    for i in sorted_kv:\n",
+    "        if i[0]==key:\n",
+    "            values_in_key1.append(i[1])\n",
+    "            values_in_key2.append(i[2])\n",
+    "        if i[0]!=key:\n",
+    "            results.append([key,np.median(values_in_key1),np.median(values_in_key2)])\n",
+    "            key = i[0]\n",
+    "            values_in_key1=[i[1]]\n",
+    "            values_in_key2=[i[2]]\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "#another error function\n",
+    "def rmspe(y, yhat):\n",
+    "\treturn np.sqrt(np.mean((yhat/y-1) ** 2))\n",
+    "\n",
+    "#another error function\n",
+    "def rmspe_xg(yhat, y):\n",
+    "\ty = np.expm1(y.get_label())\n",
+    "\tyhat = np.expm1(yhat)\n",
+    "\treturn \"rmspe\", rmspe(y,yhat)\n",
+    "\n",
+    "#create the tuples for input into the map-reduce job\n",
+    "dat = zip(train.Store,train.Sales,train.Customers)\n",
+    "\n",
+    "#mini MapReduce Job... map | sort | reduce\n",
+    "kv = map_cust_per_sale_by_store(dat)\n",
+    "kv.sort(key=lambda x: x[0])\n",
+    "store_cps_spc = reduce_by_key(kv)[1:]\n",
+    "\n",
+    "#covert the results into a pandas dataframe for merging\n",
+    "pd_store_cps_spc = pd.DataFrame(store_cps_spc,columns=['Store','ratio1','ratio2'])\n",
+    "\n",
+    "train = pd.merge(train,pd_store_cps_spc,on='Store',how='left')\n",
+    "test = pd.merge(test,pd_store_cps_spc,on='Store',how='left')\n",
+    "\n",
+    "#fix NAs (all data)\n",
+    "train = train.fillna(0)\n",
+    "test = test.fillna(0)\n",
+    "\n",
+    "#label encode\n",
+    "mappings = {'0':0, 'a':1, 'b':2, 'c':3, 'd':4}\n",
+    "train.StoreType.replace(mappings, inplace=True)\n",
+    "train.Assortment.replace(mappings, inplace=True)\n",
+    "train.StateHoliday.replace(mappings, inplace=True)\n",
+    "mappings2 = {'Jan,Apr,Jul,Oct':1, 'Feb,May,Aug,Nov':2, 'Mar,Jun,Sept,Dec':3}\n",
+    "train.PromoInterval.replace(mappings2,inplace=True)\n",
+    "\n",
+    "test.StoreType.replace(mappings, inplace=True)\n",
+    "test.Assortment.replace(mappings, inplace=True)\n",
+    "test.StateHoliday.replace(mappings, inplace=True)\n",
+    "test.PromoInterval.replace(mappings2,inplace=True)\n",
+    "\n",
+    "\n",
+    "cat_vars = ['DayOfWeek','Promo','StateHoliday','SchoolHoliday','StoreType','Assortment','CompetitionOpenSinceMonth',\n",
+    "            'CompetitionOpenSinceYear','Promo2','Promo2SinceWeek','Promo2SinceYear','PromoInterval','Day','Month','Year']\n",
+    "\n",
+    "\n",
+    "num_vars = ['Open','Store','CompetitionDistance','ratio1','ratio2']\n",
+    "\n",
+    "\n",
+    "#5x Cross Validation with XGB produced significantly worse test set error than compared to the train test split below\n",
+    "#i've concluded from this that much is gained by training on 98.8% data vs only training on 80% data\n",
+    "X_trn, X_val = train_test_split(train, test_size=0.012, random_state=10)\n",
+    "\n",
+    "#We first train a number of smaller models including svm,xgb,rf.\n",
+    "print 'Training Stage 1 Models'\n",
+    "\n",
+    "#train svm\n",
+    "svm1 = LinearSVR(verbose=True)\n",
+    "svm1.fit(X_trn[cat_vars+num_vars],X_trn['Sales'])\n",
+    "svm1_feature = svm1.predict(train[cat_vars+num_vars])\n",
+    "preds = svm1.predict(X_val[cat_vars+num_vars])\n",
+    "print 'svm ',(np.mean(((np.exp(preds)-np.exp(X_val['Sales']))/(np.exp(X_val['Sales'])+1))**2))**0.5\n",
+    "\n",
+    "\n",
+    "#train xgb\n",
+    "dtrain = xgb.DMatrix(X_trn[cat_vars+num_vars],X_trn['Sales'])\n",
+    "dvalid = xgb.DMatrix(X_val[cat_vars+num_vars],X_val['Sales'])\n",
+    "watchlist = [(dtrain, 'train'), (dvalid, 'eval')]\n",
+    "\n",
+    "num_boost_round = 50\n",
+    "params1 = {\"objective\": \"reg:linear\",\"booster\" : \"gbtree\",\n",
+    "\"eta\": 0.5,\"max_depth\": 2,\"subsample\": 0.5,\"colsample_bytree\": 0.4,\n",
+    "\"nthread\":4,\"silent\": 1,\"seed\": 1301}\n",
+    "gbm1 = xgb.train(params1, dtrain, num_boost_round, evals=watchlist,early_stopping_rounds=50, feval=rmspe_xg, verbose_eval=True)\n",
+    "\n",
+    "num_boost_round = 50\n",
+    "params2 = {\"objective\": \"reg:linear\",\"booster\" : \"gbtree\",\n",
+    "\"eta\": 0.5,\"max_depth\": 6,\"subsample\": 0.5,\"colsample_bytree\": 0.9,\n",
+    "\"nthread\":4,\"silent\": 1,\"seed\": 1301}\n",
+    "gbm2 = xgb.train(params2, dtrain, num_boost_round, evals=watchlist,early_stopping_rounds=50, feval=rmspe_xg, verbose_eval=True)\n",
+    "\n",
+    "\n",
+    "xgb1_feature = gbm1.predict(xgb.DMatrix(train[cat_vars+num_vars]))\n",
+    "xgb2_feature = gbm2.predict(xgb.DMatrix(train[cat_vars+num_vars]))\n",
+    "\n",
+    "\n",
+    "#RandomForestRegressor\n",
+    "X,Y = X_trn[cat_vars+num_vars],X_trn['Sales']\n",
+    "#train model\n",
+    "rfm1 = RandomForestRegressor(n_estimators=77,max_depth=3,n_jobs=-1,verbose=1)\n",
+    "rfm1.fit(X,Y)\n",
+    "rfm1_feature = rfm1.predict(train[cat_vars+num_vars])\n",
+    "\n",
+    "rfm2 = RandomForestRegressor(n_estimators=55,max_depth=5,n_jobs=-1,verbose=1)\n",
+    "rfm2.fit(X,Y)\n",
+    "rfm2_feature = rfm2.predict(train[cat_vars+num_vars])\n",
+    "\n",
+    "rfm3 = RandomForestRegressor(n_estimators=33,max_depth=10,n_jobs=-1,verbose=1)\n",
+    "rfm3.fit(X,Y)\n",
+    "rfm3_feature = rfm3.predict(train[cat_vars+num_vars])\n",
+    "\n",
+    "#The outputs of each of the models are combined with the other training variables\n",
+    "train['svm1'] = svm1_feature\n",
+    "train['xgb1'] = xgb1_feature\n",
+    "train['xgb2'] = xgb2_feature\n",
+    "train['rfm1'] = rfm1_feature\n",
+    "train['rfm2'] = rfm2_feature\n",
+    "train['rfm3'] = rfm3_feature\n",
+    "\n",
+    "#Again the data is split \n",
+    "X_trn, X_val = train_test_split(train, test_size=0.012, random_state=10)\n",
+    "\n",
+    "\n",
+    "print 'Baseline: '\n",
+    "#In this XGB we do not include the new models from above. This servers as a baseline result\n",
+    "#This model is tuned identically to the tuned model below.\n",
+    "dtrain = xgb.DMatrix(X_trn[cat_vars+num_vars],X_trn['Sales'])\n",
+    "dvalid = xgb.DMatrix(X_val[cat_vars+num_vars],X_val['Sales'])\n",
+    "watchlist = [(dtrain, 'train'), (dvalid, 'eval')]\n",
+    "\n",
+    "num_boost_round = 300\n",
+    "params3 = {\"objective\": \"reg:linear\",\"booster\" : \"gbtree\",\n",
+    "\"eta\": 0.3,\"max_depth\": 10,\"subsample\": 0.95,\"colsample_bytree\": 0.9,\n",
+    "\"nthread\":4,\"silent\": 1,\"seed\": 1301}\n",
+    "gbm3 = xgb.train(params3, dtrain, num_boost_round, evals=watchlist,early_stopping_rounds=100, feval=rmspe_xg, verbose_eval=True)\n",
+    "\n",
+    "preds = gbm3.predict(dvalid)\n",
+    "#score\n",
+    "Y_val = dvalid.get_label()\n",
+    "rmspe1 = (np.mean(((np.exp(preds)-np.exp(Y_val))/(np.exp(Y_val)+1))**2))**0.5\n",
+    "print 'score: ',rmspe1\n",
+    "\n",
+    "\n",
+    "print 'Stacked Model:'\n",
+    "#The outputs of the above models are fed in as inputs to another XGB model\n",
+    "dtrain = xgb.DMatrix(X_trn[cat_vars+num_vars+['xgb1','xgb2','rfm1','rfm2','rfm3','svm1']],X_trn['Sales'])\n",
+    "dvalid = xgb.DMatrix(X_val[cat_vars+num_vars+['xgb1','xgb2','rfm1','rfm2','rfm3','svm1']],X_val['Sales'])\n",
+    "watchlist = [(dtrain, 'train'), (dvalid, 'eval')]\n",
+    "\n",
+    "num_boost_round = 300\n",
+    "params3 = {\"objective\": \"reg:linear\",\"booster\" : \"gbtree\",\n",
+    "\"eta\": 0.3,\"max_depth\": 10,\"subsample\": 0.95,\"colsample_bytree\": 0.9,\n",
+    "\"nthread\":4,\"silent\": 1,\"seed\": 1301}\n",
+    "gbm3 = xgb.train(params3, dtrain, num_boost_round, evals=watchlist,early_stopping_rounds=100, feval=rmspe_xg, verbose_eval=True)\n",
+    "\n",
+    "preds = gbm3.predict(dvalid)\n",
+    "#score\n",
+    "Y_val = dvalid.get_label()\n",
+    "rmspe1 = (np.mean(((np.exp(preds)-np.exp(Y_val))/(np.exp(Y_val)+1))**2))**0.5\n",
+    "print 'score: ',rmspe1\n",
+    "\n",
+    "\n",
+    "#baseline model 0.09238 OOS score\n",
+    "#stacked model 0.09829 OOS score\n",
+    "\n",
+    "#stacked model didn't improve. this model is overfitting the data since train error\n",
+    "#is 0.074728 for baseline and 0.074210 for stacked model\n",
+    "\n"
    ]
   },
   {
