--- a/rossman/implementation.ipynb
+++ b/rossman/implementation.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1558,7 +1558,7 @@
     "| OLS Model Per Store in R | Initial Submission| DayOfWeek + Open + Promo + StateHoliday + SchoolHoliday | baseline | RMSE =0.83, 15 from bottom|\n",
     "| Various models + Cross Validation  | model exploration |Stores + DayOfWeek + Open + Promo + StateHoliday + SchoolHoliday | logSales, dummy variables in sparse array, changed model included store as a feature | RandomForestRegressor with 50 levels, 2 folds was the best, submitted score = 0.15221, **Took hours to days**|\n",
     "| X gradient boost (XGB)| Feature exploration to improve on reported excellent performance | various features,  external vs internal evaluation | converged on slightly improved performance | best submitted RMSE =0.13704 **train time reduced (~10 min)** |\n",
-    "| SVR, nuSVR, Random Forest Regressor and Kernel Ridge | more complex features, regression at store level | Added: Month of Promo2, dropped (StateHoliday + SchoolHoliday + StoreType + Assortment) | Multiple regressors at store level, dropped variables | NuSVM, submitted **score = 0.11413**, training time ~2 minutes|\n",
+    "| SVR, nuSVR, Random Forest Regressor and Kernel Ridge | more complex features, regression at store level | Dropped some features (StateHoliday + SchoolHoliday + StoreType + Assortment) | Multiple regressors at store level | NuSVM, submitted **score = 0.11413**, training time ~2 minutes|\n",
     "| Stack models | Stack 6 models (1 SVM model + 2 XGB models + 3 RF models) | full varaible set plus ratio1 and ratio2  | No improvement **model overfit** | train error = 0.074728 for baseline error for stacked=  0.074210|"
    ]
   },
@@ -1976,19 +1976,16 @@
     "    - nuSVR has the best performance\n",
     " - Use the last two months as the dev data\n",
     " - Dropping these features improves the score: StateHoliday, SchoolHoliday\n",
-    " - Dropped these features because they're constant for a given store: StoreType, Assortment\n",
-    " - Promo2:\n",
-    "    - Have tried two approaches:\n",
-    "        - (1) For each day, we have a binary feature specifying whether the store is on Promo2 or not.\n",
-    "        - (2) For the store as a whole, mark down which month has Promo2.\n",
-    "    - To my surprise, approach (2) actually works better.\n",
+    " - Did not use any Store feature (e.g. StoreType, Assortment, etc.) because they're constant for any given store\n",
+    "     - For Promo2, have tried a binary feature specifying whether the store is on Promo2 or not.  But that didn't improve the score and so it's dropped as well.\n",
+    "\n",
     "\n",
     "LB score (before competition deadline): 0.11413"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -2030,16 +2027,7 @@
     "    train_df.drop('StateHoliday', inplace=True, axis=1)\n",
     "    train_df.drop('SchoolHoliday', inplace=True, axis=1)\n",
     "\n",
-    "    # Each store has a binary feature for each month, specifying whether Promo2 is ON for that month\n",
-    "    for i in range(1,13):\n",
-    "        month = datetime.date(2008, i, 1).strftime('%b')\n",
-    "        store_df['Promo2_' + str(i)] = store_df['Promo2'] * store_df['PromoInterval'].apply(lambda x: month in str(x))\n",
-    "\n",
-    "    store_cols = [i for i in store_df.columns.tolist() if 'Promo2_' in i]\n",
-    "    store_cols.append('Store')\n",
-    "\n",
-    "    train_full_df = pd.merge(train_df, store_df.ix[:,store_cols], on='Store')\n",
-    "    train_data = transformData_Patrick(train_full_df)\n",
+    "    train_data = transformData_Patrick(train_df)\n",
     "\n",
     "    train_data.set_index('Date', inplace=True)\n",
     "    train_data.sort_index(inplace=True)\n",
@@ -2049,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -2077,9 +2065,6 @@
     "\n",
     "    train_set = data[data.index <= test_cutoff_date]\n",
     "    dev_set = data[data.index > test_cutoff_date]\n",
-    "    print \"train_set size:\", len(train_set)\n",
-    "    print \"dev_set size:\", len(dev_set)\n",
-    "\n",
     "    \n",
     "    train_set_grouped = train_set.groupby('Store')\n",
     "    dev_set_grouped = dev_set.groupby('Store')\n",
@@ -2149,7 +2134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -2167,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2176,12 +2161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_set size: 785727\n",
-      "dev_set size: 58611\n",
-      "Training model - dev data RMSPE= 0.141207144887\n",
+      "Training model - dev data RMSPE= 0.139213477295\n",
       "Model:\n",
       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)\n",
-      "Time taken: 10.6s\n"
+      "Time taken: 8.8s\n"
      ]
     }
    ],
@@ -2191,7 +2174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -2200,13 +2183,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_set size: 785727\n",
-      "dev_set size: 58611\n",
-      "Training model - dev data RMSPE= 0.128787214294\n",
+      "Training model - dev data RMSPE= 0.128560388582\n",
       "Model:\n",
       "SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='auto',\n",
       "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n",
-      "Time taken: 50.2s\n"
+      "Time taken: 51.1s\n"
      ]
     }
    ],
@@ -2216,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -2225,13 +2206,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train_set size: 785727\n",
-      "dev_set size: 58611\n",
-      "Training model - dev data RMSPE= 0.126791703666\n",
+      "Training model - dev data RMSPE= 0.127180605012\n",
       "Model:\n",
       "NuSVR(C=1.0, cache_size=900, coef0=0.0, degree=3, gamma='auto', kernel='rbf',\n",
       "   max_iter=-1, nu=0.8, shrinking=True, tol=0.001, verbose=False)\n",
-      "Time taken: 117.1s\n"
+      "Time taken: 112.5s\n"
      ]
     }
    ],
